# wayback-machine-newspapers

./: .isort.cfg  .pylintrc  README.md  pyproject.toml
.github/workflows/: python-app.yml
anynews_wbm/dashboards/table/: table_app.py
anynews_wbm/domains/kommersant/: extract.py
anynews_wbm/domains/meduza/: extract.py
anynews_wbm/domains/rbc/: extract.py  parse.py
anynews_wbm/extaction/: extraction.py  transforms.py
anynews_wbm/snapshot/: collection.py  snapshot.py
anynews_wbm/snapshot/db/: client.py
anynews_wbm/snapshot/processing/: filter.py
anynews_wbm/waybackmachine/: items.py  middlewares.py  pipelines.py  settings.py
anynews_wbm/waybackmachine/spiders/: base.py  db.py  meduza.py  rbc.py  response.py  wbm_collect.py
paperworld/cdx/: __init__.py  cdx.py  cdx_iterator.py
paperworld/search/: engine.py  items.py
paperworld/waybackmachine/: items.py  settings.py
paperworld/waybackmachine/spiders/: base.py  meduza.py  rbc.py  wbm_collect.py
scripts/: meduza.sh  rbc.sh
settings/: meduza.yaml  rbc.yaml
status/: __main__.py  response.py  scrapy.cfg
status/analysis/plot/: events.py
status/cdx/: __init__.py  cdx_iterator.py
status/dashboards/: timeline.py
status/search/: engine.py
status/waybackmachine/: middlewares.py  pipelines.py
status/waybackmachine/spiders/: base.py  meduza.py  rbc.py
tests/db/: test_snapshot.py
wbm_newspapers/: __main__.py  response.py
wbm_newspapers/domains/meduza/: extract.py
wbm_newspapers/domains/rbc/: extract.py
wbm_newspapers/extaction/: extraction.py  utils.py
wbm_newspapers/extraction/: extraction.py  transforms.py  utils.py
wbm_newspapers/snapshot/: snapshot.py
wbm_newspapers/snapshot/db/: client.py
wbm_newspapers/waybackmachine/: items.py  middlewares.py  pipelines.py  utils.py
wbm_newspapers/waybackmachine/spiders/: base.py  db.py  meduza.py  rbc.py  (+1 more)
