[tool.poetry]
name = "anynews-wbm"
version = "0.1.0"
description = ""
authors = ["Arseniy Shchepetnov <a.shchepetnov@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.6,<4.0"
pylint = "^2.11.1"
Scrapy = "^2.5.1"
autopep8 = "^1.6.0"
pymongo = "^3.12.1"
pandas = "^1.3.4"
waybackmachine-cdx = {git = "https://github.com/ArseniyShchepetnov/waybackmachine-cdx.git"}
parse = "^1.19.0"
beautifulsoup4 = "^4.10.0"
PyYAML = "^6.0"
requests = "^2.26.0"
matplotlib = "^3.5.1"
nltk = "^3.6.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.11.1"
autopep8 = "^1.6.0"
mypy = "^0.910"
jupyterlab = "^3.2.3"
types-requests = "^2.27.16"
types-PyYAML = "^6.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



