[tool.poetry]
name = "wayback-machine-newspapers"
version = "0.1.0"
description = "Web scraping tool for waybackmachine and text article sites in it."
authors = ["Arseniy Shchepetnov <a.shchepetnov@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.7.2,<3.10"
pip = ">=22.2.2"
setuptools=">=65.3.0"
wheel=">=0.37.1"
numpy = ">=1.21.6"
pandas = ">=1.3.5"
requests = ">=2.28.1"
Scrapy = "^2.5.1"
pymongo = "^3.12.1"
parse = "^1.19.0"
beautifulsoup4 = "^4.10.0"
PyYAML = "^6.0"
matplotlib = "^3.5.1"
nltk = "^3.6.7"
waybackmachine-cdx = {git = "https://github.com/ArseniyShchepetnov/waybackmachine-cdx.git", tag = "v0.1.0"}

[tool.poetry.dev-dependencies]
pylint = ">=2.15.2"
autopep8 = ">=1.7.0"
mypy = ">=0.971"
pytest = ">=7.1.3"
pytest-cov = "^3.0.0"
jupyterlab = "^3.2.3"
types-requests = "^2.27.16"
types-PyYAML = "^6.0.5"
ipykernel = "^6.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



